--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="table-content low-price">
             <div class="table-content-header">
                 <h1 class="table-content-header-text">BASIC</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dapibus risus magna, ac viverra nisi ullamcorper eu.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="table-content-main">
                 <h1 class="price-text">
@@ -28,7 +28,7 @@
         <div class="table-content med-price">
             <div class="table-content-header">
                 <h1 class="table-content-header-text">STANDART</h1>
-                <p>Cras purus sem, placerat sit amet nibh laoreet, euismod pellentesque purus. Vivamus suscipit nec eros in mollis.</p>
+                <p>Cras purus sem, placerat sit amet nibh laoreet, euismod pellentesque purus.</p>
             </div>
             <div class="table-content-main">
                 <h1 class="price-text">
@@ -45,7 +45,7 @@
         <div class="table-content big-price">
             <div class="table-content-header">
                 <h1 class="table-content-header-text">PREMIUM</h1>
-                <p>Duis vel tellus in nulla eleifend aliquam. Vestibulum fermentum, est eu rutrum aliquam, enim urna euismod leo, eget aliquam dui massa quis ante.</p>
+                <p>Duis vel tellus in nulla eleifend aliquam. Vestibulum fermentum.</p>
             </div>
             <div class="table-content-main">
                 <h1 class="price-text">
