--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="table-content med-price">
             <div class="table-content-header">
                 <h1 class="table-content-header-text">STANDART</h1>
-                <p>Cras purus sem, placerat sit amet nibh laoreet, euismod pellentesque purus.</p>
+                <p>Cras purus sem, placerat sit amet nibh laoreet, euismod.</p>
             </div>
             <div class="table-content-main">
                 <h1 class="price-text">
