--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="table-content-main">
                 <h1 class="price-text">
-                    <span>$</span>20<span>/mo</span>
+                    <span class="dollar-sign">$</span>20<span class="permonth-sign">/mo</span>
                 </h1>
                 <hr>
                 <ul>
@@ -39,7 +39,7 @@
             </div>
             <div class="table-content-main">
                 <h1 class="price-text">
-                    <span>$</span>35<span>/mo</span>
+                    <span class="dollar-sign">$</span>35<span class="permonth-sign">/mo</span>
                 </h1>
                 <hr>
                 <ul>
@@ -56,7 +56,7 @@
             </div>
             <div class="table-content-main">
                 <h1 class="price-text">
-                    <span>$</span>50<span>/mo</span>
+                    <span class="dollar-sign">$</span>50<span class="permonth-sign">/mo</span>
                 </h1>
                 <hr>
                 <ul>
