added buttons and styled them (gradient, hover, focus, active)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
                     <li>Aenean non felis pulvinar, rutrum ante quis, vehicula diam.</li>
                     <li>Aliquam ac massa condimentum, fermentum ipsum vitae, tristique elit.</li>
-                </ul>  
+                </ul>
+                <button class="button-buy">Buy now</button>  
             </div>
         </div>
         <div class="table-content med-price">
@@ -44,6 +45,7 @@
                     <li>Aenean non felis pulvinar, rutrum ante quis, vehicula diam.</li>
                     <li>Aliquam ac massa condimentum, fermentum ipsum vitae, tristique elit.</li>
                 </ul>
+                <button class="button-buy">Buy now</button>  
             </div>
         </div>
         <div class="table-content big-price">
@@ -61,6 +63,7 @@
                     <li>Aenean non felis pulvinar, rutrum ante quis, vehicula diam.</li>
                     <li>Aliquam ac massa condimentum, fermentum ipsum vitae, tristique elit.</li>
                 </ul>
+                <button class="button-buy">Buy now</button>  
             </div>
         </div>
     </div>
